// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display button with left icon 1`] = `
<DocumentFragment>
  <button
    class="css-0 css-rup5mm"
    data-chakra-component="CPseudoBox"
    tabindex="0"
    type="button"
  >
    <svg
      class="css-6lyqdc css-y3asau"
      data-chakra-component="CBox"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
              
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8 0-1.85.63-3.55 1.69-4.9L16.9 18.31C15.55 19.37 13.85 20 12 20zm6.31-3.1L7.1 5.69C8.45 4.63 10.15 4 12 4c4.42 0 8 3.58 8 8 0 1.85-.63 3.55-1.69 4.9z"
        fill="currentColor"
      />
      
            
    </svg>
    Email
  </button>
</DocumentFragment>
`;

exports[`should display button with right icon 1`] = `
<DocumentFragment>
  <button
    class="css-0 css-rup5mm"
    data-chakra-component="CPseudoBox"
    tabindex="0"
    type="button"
  >
    Email
    <svg
      class="css-88m0n5 css-y3asau"
      data-chakra-component="CBox"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
              
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8 0-1.85.63-3.55 1.69-4.9L16.9 18.31C15.55 19.37 13.85 20 12 20zm6.31-3.1L7.1 5.69C8.45 4.63 10.15 4 12 4c4.42 0 8 3.58 8 8 0 1.85-.63 3.55-1.69 4.9z"
        fill="currentColor"
      />
      
            
    </svg>
  </button>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <button
    class="css-0 css-rup5mm"
    data-chakra-component="CPseudoBox"
    tabindex="0"
    type="button"
  >
    Works
  </button>
</DocumentFragment>
`;
